TestCases/Errors/Haversine/observations/sst/win_04_obs.spm
obs r15-c5 0.000463627796089557
obs r16-c5 0.000256796283045722
obs r15-c6 0.000261375580885715
obs r16-c6 0.00012991109164174
obs r14-c7 0.000338148721414598
obs r15-c7 0.000188351207510387
obs r16-c7 1e-08
obs r14-c8 0.00106368033238266
obs r15-c8 1e-08
obs r13-c9 0.000426457737312371
obs r14-c9 0.000293880595989007
obs r15-c9 0.000454545454545455
obs r12-c10 0.00163398692810458
obs r13-c10 0.000189744771477643
obs r14-c10 0.00040226667371812
obs r4-c11 0.0170181280059193
obs r12-c11 0.000569476082004556
obs r13-c11 0.000138619351261436
obs r3-c12 0.00916401414302664
obs r4-c12 0.0221365000177956
obs r4-c13 0.0198815012917842
obs r5-c13 0.0425
obs r5-c14 0.038125
obs r6-c14 0.0334259259259259
obs r6-c15 0.0175730377166157
obs r8-c18 0.0197967250141163
obs r9-c18 0.0237575757575758
obs r8-c19 0.0176618357487923
obs r9-c19 0.023010101010101
obs r10-c19 0.0206656034088689
obs r11-c19 0.030093954248366
obs r12-c19 0.0122222222222222
obs r9-c20 0.00272727272727273
obs r10-c20 0.00625272331154684
error_value r15-c5 0.2
error_value r16-c5 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r14-c7 0.2
error_value r15-c7 0.2
error_value r16-c7 0.2
error_value r14-c8 0.2
error_value r15-c8 0.2
error_value r13-c9 0.2
error_value r14-c9 0.2
error_value r15-c9 0.2
error_value r12-c10 0.2
error_value r13-c10 0.2
error_value r14-c10 0.2
error_value r4-c11 0.2
error_value r12-c11 0.2
error_value r13-c11 0.2
error_value r3-c12 0.2
error_value r4-c12 0.2
error_value r4-c13 0.2
error_value r5-c13 0.2
error_value r5-c14 0.2
error_value r6-c14 0.2
error_value r6-c15 0.2
error_value r8-c18 0.2
error_value r9-c18 0.2
error_value r8-c19 0.2
error_value r9-c19 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r12-c19 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
